[gd_scene load_steps=9 format=3 uid="uid://domkt1qmgve2v"]

[ext_resource type="Script" path="res://dialogic/cutscene/cutscene20M.gd" id="1_hu8g8"]
[ext_resource type="PackedScene" uid="uid://bqps2coqsm63e" path="res://scenes/enemies/gigaster_boss.tscn" id="2_eblvc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwwtj"]
size = Vector2(323, 190)

[sub_resource type="Animation" id="Animation_3uu3n"]
resource_name = "cutscene1"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"proxy_disable_player_input_for_cutscene"
}, {
"args": ["run"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}, {
"args": [],
"method": &"_start_dialogic_from_animation"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"proxy_set_player_face_direction"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-1578, -427), 5.0, 1, 1],
"method": &"proxy_move_player_to_position"
}]
}

[sub_resource type="Animation" id="Animation_4t64i"]
resource_name = "cutscene1.1"
length = 2.0
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["idle"],
"method": &"proxy_play_player_visual_animation"
}]
}

[sub_resource type="Animation" id="Animation_x330y"]
resource_name = "cutscene2"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-1],
"method": &"proxy_set_player_face_direction"
}, {
"args": [],
"method": &"proxy_enable_player_input_after_cutscene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cywr2"]
_data = {
"cutscene1": SubResource("Animation_3uu3n"),
"cutscene1.1": SubResource("Animation_4t64i"),
"cutscene2": SubResource("Animation_x330y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_faemg"]
size = Vector2(20, 417.25)

[node name="cutscene20M" type="Area2D"]
position = Vector2(79, 74)
script = ExtResource("1_hu8g8")
gigaster_scene = ExtResource("2_eblvc")
boss_barriers = Array[NodePath]([NodePath("BarrierLeft"), NodePath("BarrierRight")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(91.5, 30)
shape = SubResource("RectangleShape2D_xwwtj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cywr2")
}

[node name="BossCamera" type="Camera2D" parent="."]
position = Vector2(-2, -27)
zoom = Vector2(0.6, 0.6)

[node name="npc1" type="Sprite2D" parent="."]

[node name="HealthSpawnMarker" type="Marker2D" parent="."]
position = Vector2(-7, -186)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(1, 86)

[node name="BarrierLeft" type="StaticBody2D" parent="."]
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierLeft"]
position = Vector2(-279, -74)
shape = SubResource("RectangleShape2D_faemg")
metadata/_edit_lock_ = true

[node name="BarrierRight" type="StaticBody2D" parent="."]
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierRight"]
position = Vector2(273, -74)
shape = SubResource("RectangleShape2D_faemg")

[node name="Timer_HealthPickup" type="Timer" parent="."]
wait_time = 60.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
